<resources>
    <string name="app_name">Navigatio Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">atendimento@atm.com.br</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_contato">Contato</string>
    <string name="menu_sobre">Sobre</string>

    <!-- atributos fragment SERVIÇOS-->
    <string name="titulo_um">Sistema de gestão da qualidade</string>
    <string name="texto_um">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu vulputate nunc, non interdum metus. Mauris tempor mollis massa, faucibus venenatis tellus viverra nec. Sed pharetra hendrerit urna, a bibendum odio blandit ut. Donec sed tincidunt turpis. Maecenas libero nisl, rhoncus ut pharetra in, eleifend quis ante. Ut sit amet augue dapibus, consectetur magna a, scelerisque tortor. Curabitur non fringilla odio. In placerat ornare est, at imperdiet diam vulputate ut. Sed imperdiet ultrices vehicula. Sed egestas, turpis tempus commodo posuere, lorem orci interdum augue, ut elementum lacus dui eu erat. </string>
    <string name="titulo_dois">Indicadores de desempenho</string>
    <string name="texto_dois">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu vulputate nunc, non interdum metus. Mauris tempor mollis massa, faucibus venenatis tellus viverra nec. Sed pharetra hendrerit urna, a bibendum odio blandit ut. Donec sed tincidunt turpis. Maecenas libero nisl, rhoncus ut pharetra in, eleifend quis ante. Ut sit amet augue dapibus, consectetur magna a, scelerisque tortor. Curabitur non fringilla odio. In placerat ornare est, at imperdiet diam vulputate ut. Sed imperdiet ultrices vehicula. Sed egestas, turpis tempus commodo posuere, lorem orci interdum augue, ut elementum lacus dui eu erat. </string>
    <string name="botao">Avançar</string>

    <!-- atributos fragment CLIENTES-->
    <string name="titulo_clientes">Clientes</string>
    <string name="texto_clientes">Em mais de 15 anos de história, sempre tivemos um relacionamento de valor com nosso cliente, blá, blá,blá,blá,blá,.</string>
    <string name="cliente1">Cielo</string>
    <string name="cliente2">Electrolux</string>
    <string name="cliente3">Samsung</string>
    <string name="cliente4">Microsoft</string>
    <string name="cliente5">Wolksvagem</string>
    <string name="hello_blank_fragment">Teste</string>
</resources>